Fixing Search bar bleeding the 1000 grid

--- a/project_new/public/stylesheets/frameworks/normalize.css
+++ b/project_new/public/stylesheets/frameworks/normalize.css
@@ -356,9 +356,10 @@ input[type="number"]::-webkit-outer-spin-button {
 
 input[type="search"] {
   -webkit-appearance: textfield; /* 1 */
-  -moz-box-sizing: content-box;
-  -webkit-box-sizing: content-box; /* 2 */
-  box-sizing: content-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box; /* 2 */
+  box-sizing: border-box;
+  padding: 1.5em 1em;
 }
 
 /**
